# ratiopath

./: .gitignore  .mypy.ini  .ruff.toml  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  versions.json
.gemini/: styleguide.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: build-docs.yml  docs-preview.yml  lint.yml  mkdocs-build.yml  publish.yml  pytest.yml  python-lint.yml  python-publish.yml  tests.yml
docs/: annotation_parsing.md  index.md  package.json  tsconfig.json
docs/app/: layout.config.tsx  layout.tsx
docs/examples/: index.md
docs/reference/: openslide.md  utils.md
examples/: index.html
feat-examples/: 404.html  index.html  objects.inv
feat-examples/examples/: index.html
feat-examples/search/: search_index.json
histopath/: openslide.py
histopath/augmentations/: __init__.py  estimate_stain_vectors.py  stain_augmentor.py
histopath/masks/: __init__.py  tissue_mask.py
histopath/parsers/: __init__.py  abstract_parser.py  asap_parser.py  geojson_parser.py  qupath_parser.py
histopath/ray/: __init__.py  annotations.py  read_slides.py
histopath/tiling/: __init__.py  annotations.py  openslide_tile_reader.py  read_slide_tiles.py  (+5 more)
ratiopath/: misc.py  openslide.py  tifffile.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
tests/: conftest.py  test_annotations.py  test_mask_builders.py  test_metadatasources.py  test_overlays.py  test_parsers.py  test_ray_aggregations.py  test_split.py  test_tile_readers.py  test_tilers.py
(+194 files in other folders)
