[project]
name = "histopath"
version = "0.1.0"
description = ""
authors = [
    { name = "Matěj Pekár", email = "matejpekar@mail.muni.cz" },
    { name = "Jakub Pekár", email = "jakubpekar@mail.muni.cz" },
    { name = "Adam Kukučka", email = "adamkukucka@mail.muni.cz" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.2.2"]


[tool.uv]
dev-dependencies = ["mypy", "pytest", "ruff"]
